--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.20.0",
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-auto": "^1.0.0-next.33",
+    "@sveltejs/adapter-node": "^1.0.0-next.73",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -30,5 +31,9 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@urql/svelte": "^1.3.3",
+    "graphql": "^16.3.0"
+  }
 }
