Add SMUI + themes

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR /client
 COPY package*.json .
 RUN npm ci
 
+COPY . .
+
 FROM install AS dev
 WORKDIR /client
 CMD npx svelte-kit dev --host --port 3030
