--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "prepare-theme": "npm run smui-theme",
+    "smui-theme": "smui-theme compile static/smui.css -i src/theme"
   },
   "devDependencies": {
     "@playwright/test": "^1.20.0",
+    "@smui/data-table": "^6.0.0-beta.15",
     "@sveltejs/adapter-auto": "^1.0.0-next.33",
     "@sveltejs/adapter-node": "^1.0.0-next.73",
     "@sveltejs/kit": "next",
@@ -25,6 +28,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "smui-theme": "^6.0.0-beta.15",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
