--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,13 @@
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync",
+    "prepare-kit": "svelte-kit sync",
     "test": "playwright test",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "prepare-theme": "npm run smui-theme",
+    "prepare": "npm run smui-theme",
     "smui-theme": "smui-theme compile static/smui.css -i src/theme"
   },
   "devDependencies": {
