--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -2,11 +2,6 @@ name: Client CI
 
 on:
   pull_request:
-    paths:
-      - ./client/**
-  push:
-    paths:
-      - ./client/**
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,4 +16,5 @@ jobs:
         uses: creyD/prettier_action@v4.2
         with:
           prettier_plugins: "prettier-plugin-svelte"
+          prettier_options: --write **/*.{js,svelte}
 
