--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -3,7 +3,6 @@ name: Client CI
 on:
   pull_request:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   prettier:
     runs-on: ubuntu-latest
@@ -17,4 +16,15 @@ jobs:
         with:
           prettier_plugins: "prettier-plugin-svelte"
           prettier_options: --write **/*.{js,svelte}
-
+  svelte-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "17"
+      - name: "Install and run svelte-check"
+        run: |
+          cd ./client 
+          npm install
+          npm run check
