--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
 node_modules
 /build
-/.svelte-kit
+.svelte-kit/generated/
+.svelte-kit/runtime/
+.svelte-kit/types/
 /package
 .env
 .env.*
