--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
 		"preview": "svelte-kit preview",
 		"prepare-kit": "svelte-kit sync",
 		"test": "playwright test",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check": "svelte-check --tsconfig ./tsconfig.json --fail-on-warnings",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
