--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -28,3 +28,17 @@ jobs:
           cd ./client 
           npm install
           npm run check
+  docker-build:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v1
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+        - name: Build 
+          uses: docker/build-push-action@v2
+          with:
+            context: ./client
+
