--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,26 @@
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"prepare": "npm run smui-theme",
-		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
+		"smui-theme": "smui-theme compile static/smui.css -i src/theme",
+		"graphql-codegen": "graphql-codegen --config codegen.yml"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^2.6.2",
+		"@graphql-codegen/gql-tag-operations-preset": "^1.3.0",
+		"@graphql-codegen/introspection": "2.1.1",
+		"@graphql-codegen/typescript": "^2.4.8",
+		"@graphql-codegen/typescript-document-nodes": "2.2.8",
+		"@graphql-codegen/typescript-graphql-files-modules": "2.1.1",
+		"@graphql-codegen/typescript-operations": "^2.3.5",
+		"@graphql-codegen/urql-introspection": "2.1.1",
 		"@playwright/test": "^1.20.0",
+		"@smui/button": "^6.0.0-beta.15",
+		"@smui/circular-progress": "^6.0.0-beta.15",
+		"@smui/common": "https://gitpkg.now.sh/jcalabro/svelte-material-ui/packages/common?master",
 		"@smui/data-table": "^6.0.0-beta.15",
+		"@smui/form-field": "^6.0.0-beta.15",
+		"@smui/switch": "^6.0.0-beta.15",
+		"@smui/textfield": "^6.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^1.0.0-next.33",
 		"@sveltejs/adapter-node": "^1.0.0-next.73",
 		"@sveltejs/kit": "next",
@@ -26,10 +41,13 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"graphql-codegen-svelte-apollo": "^1.1.0",
+		"graphqurl": "^1.0.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"smui-theme": "^6.0.0-beta.15",
 		"svelte": "^3.44.0",
+		"svelte-apollo": "^0.5.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
 		"tslib": "^2.3.1",
@@ -37,7 +55,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@urql/svelte": "^1.3.3",
+		"@apollo/client": "^3.5.10",
 		"graphql": "^16.3.0"
 	}
 }
