Revert @smui/common pin and tweak svelte-check

--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
 		"preview": "svelte-kit preview",
 		"prepare-kit": "svelte-kit sync",
 		"test": "playwright test",
-		"check": "svelte-check --tsconfig ./tsconfig.json --fail-on-warnings",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"check": "svelte-check --fail-on-warnings",
+		"check:watch": "svelte-check --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"prepare": "npm run smui-theme",
@@ -28,7 +28,7 @@
 		"@playwright/test": "^1.20.0",
 		"@smui/button": "^6.0.0-beta.15",
 		"@smui/circular-progress": "^6.0.0-beta.15",
-		"@smui/common": "https://gitpkg.now.sh/jcalabro/svelte-material-ui/packages/common?master",
+		"@smui/common": "^6.0.0-beta.15",
 		"@smui/data-table": "^6.0.0-beta.15",
 		"@smui/form-field": "^6.0.0-beta.15",
 		"@smui/switch": "^6.0.0-beta.15",
