--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 version: "3.9"
 services:
 
-  client:
+  vue:
     build:
-      context: ./client
-      target: dev
+      context: ./vue
     ports:
-      - "3030:3030"
+      - "9000:9000"
     volumes:
-      - ./client:/client
-      - client-node-modules:/client/node_modules
+      - ./vue:/vue
+      - vue-node-modules:/vue/node_modules
 
   postgres:
     build:
@@ -39,5 +38,4 @@ services:
       # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
 
 volumes:
-  client-node-modules:
-  apollo-node-modules:
+  vue-node-modules:
