--- a/.github/workflows/vue.yaml
+++ b/.github/workflows/vue.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: creyD/prettier_action@v4.2
         with:
           prettier_options: --write **/*.{js,ts,vue,scss,html,md,json}
-          working_directory: ./vue
+          working_directory: vue/
   docker-build:
       runs-on: ubuntu-latest
       steps:
