--- a/vue/Dockerfile
+++ b/vue/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:17
 WORKDIR /vue
 RUN npm i -g @quasar/cli
-COPY package*.json .
+COPY package.json .
+COPY package-lock.json .
 RUN npm ci
 
 COPY . .
