--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     volumes:
       - ./vue:/vue
       - vue-node-modules:/vue/node_modules
-
+    environment:
+      CHOKIDAR_USEPOLLING: true
+      
   postgres:
     image: postgres:12
     environment:
